# Learning-Rust

./: .gitignore  README.md
Basics/src/: arrays.rs  functions.rs  loops.rs  poniter_ref.rs  print.rs  strings.rs  tuples.rs  vars.rs  vectors.rs
hello-world/: Cargo.toml
hello-world/src/: cli.rs  conditionals.rs  enums.rs  main.rs  print.rs  strucs.rs  types.rs
opengl/: Cargo.toml
opengl/src/: blue_screen.rs  colored_triangle.rs  main.rs  moving_triangle.rs  triangle.rs
poke_api/: Cargo.toml  db.sqlite
poke_api/src/: main.rs
rs_browser/: Cargo.toml
rs_browser/src/: css.rs  css_parser.rs  dom.rs  html_parser.rs
snake_game/: Cargo.toml
todo_api/: .gitignore
todo_api/src/: main.rs  todo.rs
